re PR middle-end/21894 (Invalid operand to binary operator with nested function)

PR 21894
        * tree-nested.c (convert_local_reference): Save and restore val_only
        around component_ref and friends.  Clear walk_subtrees by default.

From-SVN: r102866